SubBt/force-app/main/default/objects/Journal_Entry__c/fields/Debits__c.field-meta.xml
<CustomField>
    <fullName>Debits__c</fullName>
    <label>Debits</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>