SubBt/force-app/main/default/objects/Journal_Entry__c/fields/Journal_Entry_Name__c.field-meta.xml
<CustomField>
    <fullName>Journal_Entry_Name__c</fullName>
    <label>Journal Entry Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>