SubBt/force-app/main/default/objects/Journal_Entry__c/fields/Memo__c.field-meta.xml
<CustomField>
    <fullName>Memo__c</fullName>
    <label>Memo</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>