SubBt/force-app/main/default/objects/Journal_Entry__c/fields/Number_of_Lines__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Lines__c</fullName>
    <label>Number of Lines</label>
    <length>255</length>
    <type>Text</type>
</CustomField>