SubBt/force-app/main/default/objects/Journal_Entry__c/fields/Posting_Status__c.field-meta.xml
<CustomField>
    <fullName>Posting_Status__c</fullName>
    <label>Posting Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In Process</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Waiting for Approval</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>